<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:elevation="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:scaleType="centerCrop"
        android:translationZ="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/api_coding_test" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/warningText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3px"
                android:textColor="#FF0000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/email_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:elevation="5dp"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:hint="@string/email_placeholder"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:shadowColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/passwordTextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:elevation="5dp"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password_placeholder"
                    android:inputType="textPassword"
                    android:padding="12dp" />

            </LinearLayout>

            <Button
                android:id="@+id/logInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#03A9F4"
                android:elevation="2dp"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/submit_signIn"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/signUpText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:fontFamily="sans-serif"
                    android:padding="4dp"
                    android:text="@string/sign_up_text"
                    android:textColor="#2196F3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"/>
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/copyRightText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="3px"
        android:text="@string/copyright"
        android:textColor="#838383"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>