<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocalizeShowActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#03A9F4"
            android:elevation="2dp"
            android:orientation="horizontal"
            android:translationZ="3dp">

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:fontFamily="sans-serif"
                android:text="@string/get_back_button"
                android:textColor="#03A9F4"
                android:textSize="20sp"
                app:icon="@android:drawable/ic_menu_close_clear_cancel"
                app:iconSize="24dp"
                app:iconTint="#03A9F4" />

            <TextView
                android:id="@+id/title_localize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:fontFamily="sans-serif"
                android:text="@string/localize_title"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="86dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/bcu_project_icon" />

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00BCD4">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="25sp"
                        android:layout_weight="1"
                        android:translationZ="5sp"
                        app:cardCornerRadius="45dp"
                        app:cardElevation="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <TextView
                                android:id="@+id/swipeMsg"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="3sp"
                                android:layout_weight="1"
                                android:autoText="false"
                                android:gravity="center"
                                android:text="@string/swipe_left"
                                android:textAlignment="center"
                                android:textColor="#03A9F4"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="400sp"
                    android:layout_height="match_parent"
                    android:layout_margin="35sp"
                    android:layout_weight="1"
                    android:elevation="10sp"
                    android:translationZ="15sp"
                    app:cardCornerRadius="45sp">

                    <ImageView
                        android:id="@+id/card_num1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/airplane" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5sp"
                        android:gravity="center"
                        android:text="@string/localize_text"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="34sp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="340sp"
                    android:layout_height="match_parent"
                    android:layout_margin="35sp"
                    android:layout_weight="1"
                    android:elevation="10sp"
                    android:translationZ="15sp"
                    app:cardCornerRadius="45sp">

                    <ImageView
                        android:id="@+id/card_num2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/en_local" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="340sp"
                    android:layout_height="match_parent"
                    android:layout_margin="35sp"
                    android:layout_weight="1"
                    android:elevation="10sp"
                    android:translationZ="15sp"
                    app:cardCornerRadius="45sp">

                    <ImageView
                        android:id="@+id/card_num3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/jp_local" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>